# doc_translator

./: .gitignore  README.md  config.py  main.js  ocr_handler.py  ollama_service.py  package-lock.json  package.json  pptx_handler.py  preload.js  pyproject.toml  requirements.txt  requirements_windows.txt  translator.py  utils.py  web_app.py
locales/: en.json  ja.json  ko.json  th.json  zh-CN.json  zh-TW.json
python_backend/: chart_xml_handler.py  config.py  excel_handler.py  interfaces.py  ocr_handler.py  ollama_service.py  pptx_handler.py  test.py  translator.py  utils.py  web_app.py
python_backend/locales/: en.json  ja.json  ko.json  th.json  zh-CN.json  zh-TW.json
python_backend/templates/: index.html
scripts/: notarize.js
templates/: index.html
